--- a/PC_Controller/app/src/main/res/layout-land/screenshot.xml
+++ b/PC_Controller/app/src/main/res/layout-land/screenshot.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <RelativeLayout
-        android:id="@+id/imLayout"
+        android:id="@+id/relLay"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/touchscreen"
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             app:srcCompat="@android:color/background_dark" />
     </RelativeLayout>
 </LinearLayout>
